--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,16 @@
 ---
 import Welcome from '../components/Welcome.astro';
 import Layout from '../layouts/Layout.astro';
+// Ensure Vue integration is configured in Astro
+import TemplateSelector from '../components/TemplateSelector.vue';
+import EditorPanel from '../components/EditorPanel.vue';
+// Import Pinia and your store
+import { createPinia } from 'pinia';
+import { useTemplateStore } from '../stores/useTemplateStore';
+
+// Initialize Pinia
+const pinia = createPinia();
+const store = useTemplateStore(pinia);
 
 // Welcome to Astro! Wondering what to do next? Check out the Astro documentation at https://docs.astro.build
 // Don't want to use any of this? Delete everything in this file, the `assets`, `components`, and `layouts` directories, and start fresh.
@@ -8,4 +18,11 @@ import Layout from '../layouts/Layout.astro';
 
 <Layout>
 	<Welcome />
+	<TemplateSelector client:only="vue" />
+    <EditorPanel client:load />
+
+	<script>
+		import { useTemplateStore } from '../stores/useTemplateStore';
+		const store = useTemplateStore();
+	  </script>
 </Layout>
